--- a/app/src/main/res/layout/activity_new_dhaba.xml
+++ b/app/src/main/res/layout/activity_new_dhaba.xml
@@ -22,6 +22,10 @@
             name="isUpdate"
             type="Boolean" />
 
+        <variable
+            name="userModel"
+            type="com.transport.mall.model.UserModel" />
+
     </data>
 
     <LinearLayout
@@ -104,7 +108,8 @@
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_weight="1"
-                    android:background="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}" />
+                    android:background="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}"
+                    android:visibility="@{userModel.isExecutive() ? View.VISIBLE : View.GONE}" />
 
                 <TextView
                     android:id="@+id/step4"
@@ -114,7 +119,8 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:text="4"
-                    android:textColor="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.grey)}" />
+                    android:textColor="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.grey)}"
+                    android:visibility="@{userModel.isExecutive() ? View.VISIBLE : View.GONE}" />
 
                 <View
                     android:layout_width="0dp"
@@ -197,7 +203,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="@{userModel.isExecutive() ? View.VISIBLE : View.GONE}">
 
                     <TextView
                         android:id="@+id/step4Title"
