--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,9 +13,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
             android:orientation="vertical">
@@ -23,16 +23,19 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_logo_splash" />
 
-            <androidx.core.widget.ContentLoadingProgressBar
+            <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_40sdp" />
+                android:visibility="gone"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_margin="@dimen/_40sdp" />
 
-        </LinearLayout>
+        </FrameLayout>
 
         <View
             android:layout_width="0dp"
