--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -61,7 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_15sdp"
-                    android:hint="@string/name">
+                    android:hint="@string/name_">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edName"
@@ -106,7 +106,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
                         android:background="@android:color/transparent"
-                        android:hint="@string/_10_digit_mobile_number"
+                        android:hint="@string/enter_mobile_number_mandatory"
                         android:inputType="number"
                         android:maxLength="10"
                         android:text="@={vm.phoneNumberObserver}"
@@ -120,6 +120,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginHorizontal="@dimen/_15sdp"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/email">
