--- a/app/src/main/res/drawable/bg_active_dhaba_status.xml
+++ b/app/src/main/res/drawable/bg_active_dhaba_status.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
 
-    <corners android:radius="5dp" />
+    <corners android:radius="10dp" />
 
-    <solid android:color="#ECFBE0" />
+    <solid android:color="#D8ECFBE0" />
 
 </shape>
