--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -21,105 +22,114 @@
 
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/parent"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
-        android:background="@color/white"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/_15sdp">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/parent"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_70sdp"
-            android:layout_marginVertical="20dp"
-            android:src="@drawable/ic_logo_splash" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
-            android:text="@string/verify"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_18ssp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/enter_otp_sent_to"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12ssp" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvOtpSentTo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12ssp" />
-        </LinearLayout>
-
-        <com.transport.mall.utils.common.OtpEditText
-            android:id="@+id/edOtp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:cursorVisible="true"
-            android:digits="1234567890"
-            android:inputType="number"
-            android:maxLength="4"
-            android:textIsSelectable="false"
-            android:textSize="@dimen/_25ssp" />
-
-        <Button
-            android:id="@+id/btnLoginOwner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:background="@drawable/primary_color_btn_selector"
-            android:text="@string/continue_text"
-            android:textAllCaps="false"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/btnChangeNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:background="@drawable/grey_stroke_selector"
-            android:text="@string/change_phone_number"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/btnResentOtp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:background="@drawable/grey_stroke_selector"
-            android:text="@string/resend_otp"
-            android:textAllCaps="false"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/tvResendIn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:animateLayoutChanges="true"
+            android:background="@color/white"
             android:gravity="center"
-            android:text="@{countDownTime}"
-            android:textAllCaps="false"
-            android:textColor="@color/black" />
+            android:orientation="vertical"
+            android:padding="@dimen/_15sdp">
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_70sdp"
+                android:layout_marginVertical="20dp"
+                android:src="@drawable/ic_logo_splash" />
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
+                android:text="@string/verify"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_18ssp" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/enter_otp_sent_to"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvOtpSentTo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+
+            <com.mukesh.OtpView
+                android:id="@+id/otpView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/_10sdp"
+                android:focusableInTouchMode="true"
+                android:inputType="number"
+                android:itemBackground="@color/white"
+                android:textColor="@android:color/black"
+                app:OtpItemCount="4"
+                app:OtpItemHeight="@dimen/_40sdp"
+                app:OtpItemSpacing="@dimen/_15sdp"
+                app:OtpItemWidth="@dimen/_40sdp"
+                app:OtpLineColor="@color/grey_otp_box"
+                app:OtpViewType="rectangle" />
+
+            <TextView
+                android:id="@+id/tvResendIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center"
+                android:text="@{countDownTime}"
+                android:textAllCaps="false"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/btnLoginOwner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:background="@drawable/primary_color_btn_selector"
+                android:text="@string/continue_text"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnChangeNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/grey_stroke_selector"
+                android:text="@string/change_phone_number"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/btnResentOtp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/grey_stroke_selector"
+                android:text="@string/resend_otp"
+                android:textAllCaps="false"
+                android:textColor="@color/black" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </ScrollView>
 </layout>
