--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -21,8 +21,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <LinearLayout
             android:id="@+id/parent"
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/opensans_regular"
                 android:text="@string/sign_up"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_18ssp" />
@@ -61,12 +62,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_15sdp"
+                    android:fontFamily="@font/opensans_regular"
                     android:hint="@string/name_">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
                         android:inputType="textPersonName"
                         android:text="@={vm.nameObervable}"
                         android:textColor="@color/black"
@@ -106,11 +109,12 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
                         android:background="@android:color/transparent"
+                        android:fontFamily="@font/opensans_regular"
                         android:hint="@string/enter_mobile_number_mandatory"
                         android:inputType="number"
                         android:maxLength="10"
-                        android:text="@={vm.phoneNumberObserver}"
                         android:padding="@dimen/_10sdp"
+                        android:text="@={vm.phoneNumberObserver}"
                         android:textColor="@color/black"
                         android:textColorHint="@color/grey"
                         android:textSize="@dimen/_13ssp" />
@@ -120,10 +124,10 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
                     android:layout_marginHorizontal="@dimen/_15sdp"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:hint="@string/email">
+                    android:hint="@string/email"
+                    android:visibility="gone">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edEmail"
@@ -150,6 +154,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:background="@drawable/primary_color_btn_selector"
+                    android:fontFamily="@font/opensans_bold"
                     android:text="@string/sign_up"
                     android:textAllCaps="false"
                     android:textColor="@color/white" />
@@ -160,6 +165,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_bold"
                     android:text="@string/login"
                     android:textAllCaps="false"
                     android:textColor="@color/colorPrimary" />
