--- a/app/src/main/res/layout/row_side_menu.xml
+++ b/app/src/main/res/layout/row_side_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,50 +10,52 @@
         <import type="android.view.View" />
 
         <variable
-                name="position"
-                type="Integer" />
+            name="position"
+            type="Integer" />
 
         <variable
-                name="data"
-                type="com.transport.mall.model.SideMenu" />
+            name="data"
+            type="com.transport.mall.model.SideMenu" />
 
         <variable
-                name="callback"
-                type="com.transport.mall.utils.common.recyclerviewbase.RecyclerCallback" />
+            name="callback"
+            type="com.transport.mall.utils.common.recyclerviewbase.RecyclerCallback" />
 
         <variable
-                name="selectedPosition"
-                type="java.lang.Boolean" />
+            name="selectedPosition"
+            type="java.lang.Boolean" />
 
         <variable
-                name="context"
-                type="android.content.Context" />
+            name="context"
+            type="android.content.Context" />
 
     </data>
 
     <LinearLayout
-            android:id="@+id/containerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+        android:id="@+id/containerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <ImageView
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_35sdp"
-                android:padding="@dimen/_7sdp"
-                imageResource="@{data.selected ? data.hilightedIcon : data.icon}" />
+            imageResource="@{data.selected ? data.hilightedIcon : data.icon}"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:padding="@dimen/_7sdp" />
 
         <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvMenuTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/_10sdp"
-                android:text="@{data.title}"
-                android:textColor="@{data.selected ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
-                android:textSize="@dimen/_16ssp"
-                tools:text="Dhaba List" />
+            android:id="@+id/tvMenuTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_regular"
+            android:orientation="vertical"
+            android:padding="@dimen/_10sdp"
+            android:text="@{data.title}"
+            android:textColor="@{data.selected ? context.getColor(R.color.colorPrimary) : context.getColor(R.color.black)}"
+            android:textSize="@dimen/_14ssp"
+            app:isBold="@{data.selected}"
+            tools:text="Dhaba List" />
 
     </LinearLayout>
 </layout>
