--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -145,18 +145,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_regular"
                     android:padding="@dimen/_10sdp"
                     android:text="@string/privacy_policy"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textColor="@color/text_privacy_policy"
+                    android:textSize="@dimen/_10ssp" />
 
                 <TextView
                     android:id="@+id/tvTermsConditions"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_regular"
                     android:padding="@dimen/_10sdp"
                     android:text="@string/terms_and_conditions"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textColor="@color/text_privacy_policy"
+                    android:textSize="@dimen/_10ssp" />
 
             </LinearLayout>
 
