--- a/app/src/main/res/layout/dialog_request_for_call.xml
+++ b/app/src/main/res/layout/dialog_request_for_call.xml
@@ -83,6 +83,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    app:ccp_hideNameCode="true"
                     app:ccp_defaultCode="91"
                     app:ccp_textSize="@dimen/_12ssp" />
 
@@ -90,7 +92,7 @@
                     android:layout_width="0.5dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/_2sdp"
-                    android:background="@color/grey" />
+                    android:background="@color/grey_stroke" />
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edPhoneNumber"
