--- a/app/src/main/res/layout/row_timing_list.xml
+++ b/app/src/main/res/layout/row_timing_list.xml
@@ -55,6 +55,7 @@
             android:layout_margin="@dimen/_4sdp"
             android:layout_weight="1"
             android:background="@drawable/grey_stroke"
+            android:fontFamily="@font/opensans_regular"
             android:hint="@string/not_available"
             android:padding="@dimen/_4sdp"
             android:text="@{model.opening}"
@@ -69,6 +70,7 @@
             android:layout_margin="@dimen/_4sdp"
             android:layout_weight="1"
             android:background="@drawable/grey_stroke"
+            android:fontFamily="@font/opensans_regular"
             android:hint="@string/not_available"
             android:padding="@dimen/_4sdp"
             android:text="@{model.closing}"
