--- a/app/src/main/res/drawable/btn_disabled.xml
+++ b/app/src/main/res/drawable/btn_disabled.xml
@@ -2,11 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke
+    <solid
         android:width="1dp"
-        android:color="@color/grey_stroke" />
-    <corners android:radius="@dimen/_3sdp" />
-
-    <solid android:color="@color/white" />
-
+        android:color="@color/btn_disabled" />
+    <corners android:radius="@dimen/_5sdp" />
 </shape>
