--- a/app/src/main/res/drawable/primary_color_btn_selector.xml
+++ b/app/src/main/res/drawable/primary_color_btn_selector.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="false">
-        <shape>
-            <solid android:color="@color/colorPrimary" />
-            <corners android:radius="@dimen/_5sdp" />
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <solid android:color="@color/colorPrimaryDark" />
-            <corners android:radius="@dimen/_5sdp" />
-        </shape>
-    </item>
+    <item android:drawable="@drawable/btn_primary" android:state_enabled="true" android:state_pressed="false" />
 
-    <item android:state_enabled="false">
-        <shape>
-            <solid android:color="@color/grey" />
-            <corners android:radius="@dimen/_5sdp" />
-        </shape>
-    </item>
+    <item android:drawable="@drawable/btn_primary_dark" android:state_enabled="true" />
+
+    <item android:drawable="@drawable/btn_disabled" android:state_enabled="false" />
 
 </selector>
