--- a/app/src/main/res/layout/dialog_add_manager.xml
+++ b/app/src/main/res/layout/dialog_add_manager.xml
@@ -97,15 +97,17 @@
                     android:id="@+id/ccpCountryCode"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/_5sdp"
                     android:gravity="center"
                     app:ccp_defaultCode="91"
+                    app:ccp_hideNameCode="true"
                     app:ccp_textSize="@dimen/_12ssp" />
 
                 <View
                     android:layout_width="0.5dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/_2sdp"
-                    android:background="@color/grey" />
+                    android:background="@color/grey_stroke" />
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edPhoneNumber"
