--- a/app/src/main/res/layout/fragment_dhaba_list.xml
+++ b/app/src/main/res/layout/fragment_dhaba_list.xml
@@ -54,7 +54,7 @@
             <View
                 android:layout_width="@dimen/_1sdp"
                 android:layout_height="match_parent"
-                android:background="@color/grey" />
+                android:background="@color/grey_stroke" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
