--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -92,8 +92,10 @@
             <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                 android:id="@+id/ccpCountryCode"
                 android:layout_width="wrap_content"
+                app:ccp_hideNameCode="true"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:layout_marginStart="@dimen/_5sdp"
                 app:ccp_defaultCode="91"
                 app:ccp_textSize="@dimen/_12ssp" />
 
@@ -101,7 +103,7 @@
                 android:layout_width="0.5dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/_2sdp"
-                android:background="@color/grey" />
+                android:background="@color/grey_stroke" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edPhoneNumber"
