--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -38,113 +38,145 @@
         android:orientation="vertical"
         android:paddingBottom="30dp">
 
-        <ImageView
+        <include layout="@layout/layout_app_logo" />
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginVertical="20dp"
-            android:src="@drawable/ic_launcher" />
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_bold"
+            android:fontFamily="@font/opensans_regular"
             android:text="@string/choose_language"
             android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp"
-            android:textStyle="bold" />
+            android:textSize="@dimen/_16ssp" />
 
         <FrameLayout
-            android:id="@+id/flEnglish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/stroke_btn_selector">
+            android:layout_marginHorizontal="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:background="@drawable/grey_stroke"
+            android:elevation="@dimen/_5sdp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_5sdp">
 
-            <Button
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:clickable="false"
-                android:fontFamily="@font/opensans_regular"
-                android:gravity="center"
-                android:text="@string/english"
-                android:textColor="@{english ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}"
-                app:isBold="@{english}" />
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivEnglishTick"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginHorizontal="10dp"
-                android:src="@drawable/ic_tick"
-                android:visibility="@{english ? View.VISIBLE : View.GONE}" />
+                <FrameLayout
+                    android:id="@+id/flEnglish"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="@dimen/_5sdp">
 
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:clickable="false"
+                        android:fontFamily="@font/opensans_regular"
+                        android:gravity="center"
+                        android:text="@string/english"
+                        android:textAllCaps="false"
+                        android:textColor="@{english ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey_text)}"
+                        app:isBold="@{english}" />
+
+                    <ImageView
+                        android:id="@+id/ivEnglishTick"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginHorizontal="10dp"
+                        android:src="@drawable/ic_tick"
+                        android:visibility="@{english ? View.VISIBLE : View.GONE}" />
+
+                </FrameLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey_divider" />
+
+                <FrameLayout
+                    android:id="@+id/flHindi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="@dimen/_5sdp">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:clickable="false"
+                        android:fontFamily="@font/opensans_regular"
+                        android:gravity="center"
+                        android:text="@string/hindi"
+                        android:textAllCaps="false"
+                        android:textColor="@{hindi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey_text)}"
+                        app:isBold="@{hindi}" />
+
+                    <ImageView
+                        android:id="@+id/ivHindiTick"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginHorizontal="10dp"
+                        android:src="@drawable/ic_tick"
+                        android:visibility="@{hindi ? View.VISIBLE : View.GONE}" />
+
+                </FrameLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey_divider" />
+
+                <FrameLayout
+                    android:id="@+id/flPunjabi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="@dimen/_5sdp">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:clickable="false"
+                        android:fontFamily="@font/opensans_regular"
+                        android:gravity="center"
+                        android:text="@string/punjabi"
+                        android:textAllCaps="false"
+                        android:textColor="@{punjabi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey_text)}"
+                        app:isBold="@{punjabi}" />
+
+                    <ImageView
+                        android:id="@+id/icPunjabiTick"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginHorizontal="10dp"
+                        android:src="@drawable/ic_tick"
+                        android:visibility="@{punjabi ? View.VISIBLE : View.GONE}" />
+
+                </FrameLayout>
+            </LinearLayout>
         </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/flHindi"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/stroke_btn_selector">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:clickable="false"
-                android:fontFamily="@font/opensans_regular"
-                android:gravity="center"
-                android:text="@string/hindi"
-                android:textColor="@{hindi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}"
-                app:isBold="@{hindi}" />
-
-            <ImageView
-                android:id="@+id/ivHindiTick"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginHorizontal="10dp"
-                android:src="@drawable/ic_tick"
-                android:visibility="@{hindi ? View.VISIBLE : View.GONE}" />
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/flPunjabi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/stroke_btn_selector">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:clickable="false"
-                android:fontFamily="@font/opensans_regular"
-                android:gravity="center"
-                android:text="@string/punjabi"
-                android:textColor="@{punjabi ? context.getColor(R.color.colorPrimary) :  context.getColor(R.color.grey)}"
-                app:isBold="@{punjabi}" />
-
-            <ImageView
-                android:id="@+id/icPunjabiTick"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginHorizontal="10dp"
-                android:src="@drawable/ic_tick"
-                android:visibility="@{punjabi ? View.VISIBLE : View.GONE}" />
-
-        </FrameLayout>
+            android:layout_height="0dp"
+            android:layout_weight="2" />
 
     </LinearLayout>
 
