--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,186 +29,200 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-        <ScrollView
+        <!--<ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1">-->
+
+        <LinearLayout
+            android:id="@+id/parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:animateLayoutChanges="true"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/_15sdp"
+            android:paddingBottom="@dimen/_15sdp"
+            tools:context=".ui.main.MainActivity">
+
+            <include layout="@layout/layout_app_logo" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/login"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_18ssp" />
 
             <LinearLayout
-                android:id="@+id/parent"
+                android:id="@+id/llExecutiveLogin"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:animateLayoutChanges="true"
-                android:gravity="center"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="@dimen/_15sdp"
-                android:paddingBottom="@dimen/_15sdp"
-                tools:context=".ui.main.MainActivity">
+                android:visibility="@{isOwnerLogin ? View.GONE : View.VISIBLE}">
 
-                <androidx.appcompat.widget.AppCompatImageView
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/email_til"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_70sdp"
-                    android:layout_marginVertical="20dp"
-                    android:src="@drawable/ic_logo_splash" />
-
-                <TextView
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_marginHorizontal="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_regular"
-                    android:text="@string/login"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_18ssp" />
+                    android:hint="@string/email">
 
-                <LinearLayout
-                    android:id="@+id/llExecutiveLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="@{isOwnerLogin ? View.GONE : View.VISIBLE}">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/email_til"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_15sdp"
                         android:fontFamily="@font/opensans_regular"
-                        android:hint="@string/email">
+                        android:inputType="textEmailAddress"
+                        android:text="@={vm.emailObservable}"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14ssp" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/etEmail"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
-                            android:inputType="textEmailAddress"
-                            android:text="@={vm.emailObservable}"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_14ssp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/password_til"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_15sdp"
-                        android:layout_marginTop="@dimen/_15sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:hint="@string/password">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/edPwd"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
-                            android:inputType="textPassword"
-                            android:text="@={vm.passwordObservable}"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_14ssp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llOwnerLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingHorizontal="@dimen/_15sdp">
-
-                    <LinearLayout
-                        android:id="@+id/editlayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_15sdp"
-                        android:background="@drawable/grey_stroke"
-                        android:orientation="horizontal"
-                        android:visibility="@{isOwnerLogin ? View.VISIBLE : View.GONE}"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/edEmail">
-
-                        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
-                            android:id="@+id/ccpCountryCode"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            app:ccp_defaultCode="91"
-                            app:ccp_textSize="@dimen/_12ssp" />
-
-                        <View
-                            android:layout_width="0.5dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="@dimen/_2sdp"
-                            android:background="@color/grey" />
-
-                        <androidx.appcompat.widget.AppCompatEditText
-                            android:id="@+id/edPhoneNumber"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_4sdp"
-                            android:background="@android:color/transparent"
-                            android:fontFamily="@font/opensans_regular"
-                            android:hint="@string/_10_digit_mobile_number"
-                            android:inputType="number"
-                            android:maxLength="10"
-                            android:padding="@dimen/_10sdp"
-                            android:text="@={vm.mobileObservable}"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/grey"
-                            android:textSize="@dimen/_13ssp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/password_til"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_15sdp"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:orientation="vertical">
+                    android:fontFamily="@font/opensans_regular"
+                    android:hint="@string/password">
 
-                    <Button
-                        android:id="@+id/btnLogin"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edPwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/primary_color_btn_selector"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="@string/login"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:visibility="@{isOwnerLogin ? View.GONE : View.VISIBLE}" />
+                        android:fontFamily="@font/opensans_regular"
+                        android:inputType="textPassword"
+                        android:text="@={vm.passwordObservable}"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14ssp" />
 
-                    <Button
-                        android:id="@+id/btnLoginOwner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:background="@drawable/primary_color_btn_selector"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="@string/continue_text"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:visibility="@{isOwnerLogin ? View.VISIBLE : View.GONE}" />
-
-                    <Button
-                        android:id="@+id/btnSignup"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:background="@drawable/default_btn_selector"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="@string/sign_up"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorPrimary"
-                        android:visibility="@{isOwnerLogin ? View.VISIBLE : View.GONE}" />
-
-                </LinearLayout>
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
-        </ScrollView>
+
+            <LinearLayout
+                android:id="@+id/llOwnerLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingHorizontal="@dimen/_15sdp">
+
+                <LinearLayout
+                    android:id="@+id/editlayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    android:background="@drawable/grey_stroke"
+                    android:orientation="horizontal"
+                    android:visibility="@{isOwnerLogin ? View.VISIBLE : View.GONE}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/edEmail">
+
+                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
+                        android:id="@+id/ccpCountryCode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:gravity="center"
+                        app:ccp_defaultCode="91"
+                        app:ccp_hideNameCode="true"
+                        app:ccp_textSize="@dimen/_12ssp" />
+
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/_2sdp"
+                        android:background="@color/grey_stroke" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/edPhoneNumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:background="@android:color/transparent"
+                        android:fontFamily="@font/opensans_regular"
+                        android:hint="@string/_10_digit_mobile_number"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:padding="@dimen/_10sdp"
+                        android:text="@={vm.mobileObservable}"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey"
+                        android:textSize="@dimen/_13ssp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btnLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/primary_color_btn_selector"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="@string/login"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:visibility="@{isOwnerLogin ? View.GONE : View.VISIBLE}" />
+
+                <Button
+                    android:id="@+id/btnLoginOwner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/primary_color_btn_selector"
+                    android:enabled="@{vm.mobileObservable.trim().length() == 10}"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="@string/continue_text"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:visibility="@{isOwnerLogin ? View.VISIBLE : View.GONE}" />
+
+                <Button
+                    android:id="@+id/btnSignup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/default_btn_selector"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="@string/sign_up"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorPrimary"
+                    android:visibility="@{isOwnerLogin ? View.VISIBLE : View.GONE}" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2" />
+
+
+        </LinearLayout>
+        <!--        </ScrollView>-->
 
         <Button
             android:id="@+id/btnLoginToggle"
