--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#EE000F</color>
     <color name="colorPrimaryDark">#AA030D</color>
     <color name="colorAccent">#EE000F</color>
@@ -20,4 +20,11 @@
     <color name="colorGrey1">#DADADA</color>
     <color name="greenText">#3D7300</color>
     <color name="grey_otp_box">#CCCCCC</color>
+    <color name="grey_divider">#EBEBEB</color>
+    <color name="grey_text">#636363</color>
+    <color name="grey_stroke" tools:override="true">#CCCCCC</color>
+    <color name="btn_disabled" tools:override="true">#AAAAAA</color>
+    <color name="btn_stroke" tools:override="true">#A2A2A2</color>
+    <color name="divider_dcdcdc" tools:override="true">#DCDCDC</color>
+    <color name="text_privacy_policy" tools:override="true">#A2A2A2</color>
 </resources>
